Removed headers and fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -243,11 +243,21 @@ body {
     font-size: 0;
     opacity: 0;
 
+    margin: 0 0 !important;
+    padding: 0 0 !important;
+    letter-spacing: 0 !important;
+    word-spacing: 0 !important;
+
     transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .social-link:hover p {
     padding-left: 3vh;
+
+    margin: 1vh 1vw !important;
+    letter-spacing: 0.05vw !important;
+    word-spacing: 0.25vw !important;
+
     font-size: 1.3vmax;
     opacity: 1;
 }
